--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
-  <body>
+  <body class="bg-gradient-to-r from-amber-300 to-green-400">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
