--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Mathias Theys Portfolio</title>
   </head>
-  <body class="bg-gradient-to-r from-amber-300 to-green-400">
+  <body class="bg-slate-800">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
